# dream-light-console

./: .gitignore  CLAUDE.md  Cargo.toml  DreamLightConsole-CodeReview-DevPlan.md  Procfile.dev  README.md  architecture-design-from-claude-web-browser-version.md  mise.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/src/dream_light_console/: config.py  main.py
backend/src/dream_light_console/api/: fixtures.py  health.py  router.py  scenes.py  universes.py  ws.py
backend/src/dream_light_console/core/: db.py  dmx_engine.py  dmx_output.py  project.py
backend/src/dream_light_console/models/: fixture.py  scene.py  universe.py
backend/src/dream_light_console/services/: fixture_service.py  scene_service.py  universe_service.py
backend/tests/: conftest.py  test_dmx_engine.py  test_health.py  test_ws.py
crates/dlc-audio/: Cargo.toml
crates/dlc-audio/src/: main.rs
crates/dlc-engine/: Cargo.toml
crates/dlc-engine/examples/: artnet_send.rs  sacn_send.rs
crates/dlc-engine/src/: engine.rs  error.rs  fixture_mapper.rs  interpolation.rs  lib.rs  merge.rs  universe.rs
crates/dlc-engine/src/output/: artnet.rs  enttec_pro.rs  mock.rs  mod.rs  null.rs  sacn.rs  tap.rs
crates/dlc-engine/tests/: engine.rs  fixture_mapper.rs  interpolation.rs  merge.rs  output_core.rs  output_tap.rs  universe.rs
crates/dlc-protocol/: Cargo.toml
crates/dlc-protocol/src/: constants.rs  engine.rs  lib.rs  model.rs  wire.rs
crates/dlc-protocol/tests/: engine.rs  wire.rs
crates/dlc-server/: Cargo.toml
crates/dlc-server/data/: builtin-fixtures.json
crates/dlc-server/migrations/: 001_create_shows.sql  001_fixtures.sql  002_create_stages.sql  002_stages.sql  003_create_stage_objects.sql  003_songs.sql  004_concerts.sql  004_create_fixture_library.sql  005_create_presets.sql  005_fixture_groups.sql  006_create_cue_lists.sql  006_fixture_config.sql  007_create_cues.sql
crates/dlc-server/src/: config.rs  cue_executor.rs  db.rs  error.rs  fixture_types.rs  lib.rs  main.rs  state.rs  test_helpers.rs
crates/dlc-server/src/routes/: concert_programs.rs  concerts.rs  cue_lists.rs  cues.rs  dmx.rs  fixture_groups.rs  fixture_types.rs  fixtures.rs  health.rs  library.rs  mod.rs  objects.rs  placements.rs  playback.rs  presets.rs  shows.rs  songs.rs  stages.rs  ws.rs
crates/dlc-server/tests/: concert_programs.rs  concerts.rs  cue_executor.rs  cue_lists.rs  cues.rs  dmx.rs  fixture_groups.rs  fixture_types.rs  fixtures.rs  objects.rs  placements.rs  playback.rs  server_fixture_types.rs  songs.rs  stages.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/models/lights/: moving_head.glb
frontend/public/models/stands/: tripod.glb
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/dmx/: ChannelFader.tsx  UniverseMonitor.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/components/stage/: AddFixtureModal.tsx  AddFixturePanel.tsx  CatalogPanel.tsx  FixtureNode.tsx  FixturePopover.tsx  LightInspector.tsx  MaterialPanel.tsx  ModelPreview.tsx  MovingHead.tsx  Stage3D.tsx  (+11 more)
frontend/src/devices/: capabilities.ts  capability.ts  movingHead.ts  registry.ts  types.ts  validation.ts
frontend/src/fixtures/: registry.ts  types.ts
frontend/src/hooks/: useApi.ts  useLightDrag.ts  useObjectDrag.ts  useWebSocket.ts
frontend/src/materials/: registry.ts
frontend/src/pages/: Dashboard.tsx  StageEditor.tsx  StageEditorPage.tsx  StagesPage.tsx
frontend/src/scene/: objectTypeDefs.tsx  types.ts
frontend/src/stages/: registry.ts
frontend/src/store/: dmxStore.ts  stage3dStore.ts  stageEditorStore.ts  stageStore.ts
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
web-ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  main.tsx
web-ui/src/api/: client.ts  hooks.ts
web-ui/src/devices/: capability.ts  feature.ts  registry.ts  validation.ts
web-ui/src/hooks/: useApi.ts  useObjectDrag.ts  useWebSocket.ts
web-ui/src/lib/: cubicSpline.ts
web-ui/src/materials/: registry.ts
web-ui/src/pages/: FixturePage.tsx  FixturesPage.tsx  SongPage.tsx  SongVersionPage.tsx  SongsPage.tsx  StageEditorPage.tsx  StagesPage.tsx
web-ui/src/scene/: types.ts
web-ui/src/stages/: registry.ts
web-ui/src/store/: dmxStore.ts  stageEditorStore.ts  stagesStore.ts
web-ui/src/types/: index.ts
(+83 files in other folders)
