[workspace]
resolver = "2"
members = [
    "crates/dlc-server",
    "crates/dlc-engine",
    "crates/dlc-protocol",
    "crates/dlc-audio",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10" }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Type generation
ts-rs = { version = "10", features = ["serde-json-impl"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Utilities
uuid = { version = "1", features = ["v4"] }

# Serial
serialport = "4"

# Testing
mockall = "0.13"
