[project]
name = "dream-light-console-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.5",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
dlc-backend = "dream_light_console.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dream_light_console"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
