[package]
name = "dlc-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dlc-server"
path = "src/main.rs"

[dependencies]
dlc-protocol = { path = "../dlc-protocol" }
dlc-engine = { path = "../dlc-engine" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
image.workspace = true
futures-util = "0.3"
serialport.workspace = true

[dev-dependencies]
http-body-util = "0.1"
