[package]
name = "dlc-server"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "dlc-server"
path = "src/main.rs"

[dependencies]
dlc-protocol = { path = "../dlc-protocol" }
dlc-engine = { path = "../dlc-engine" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
image.workspace = true
futures-util = "0.3"
serialport.workspace = true
http-body-util = { version = "0.1", optional = true }

[features]
test-helpers = ["dep:http-body-util"]

[dev-dependencies]
dlc-server = { path = ".", features = ["test-helpers"] }
http-body-util = "0.1"
tower.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
dlc-protocol = { path = "../dlc-protocol" }
